config/gitea/manifest/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitea
  namespace: devops
  labels:
    name: gitea
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: gitea
    spec:
      # Initial rights settings when creating disk can be incorrect for the git user in the gitea container: Use init container to set the rights
      containers:
      - name: gitea
        image: "gitea/gitea:1.5"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        - containerPort: 22
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   # This pod takes a very long time to start up. Be cautious when
        #   # lowering this value to avoid Pod death during startup.
        #   initialDelaySeconds: 200
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        #   successThreshold: 1
        #   failureThreshold: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        #   successThreshold: 1
        #   failureThreshold: 3
        volumeMounts:
        - name: gitea
          mountPath: "/data"
        - name: gitea-config
          mountPath: /data/gitea/conf
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 200Mi
      volumes:
      - name: gitea
        persistentVolumeClaim:
          claimName: gitea
      - name: gitea-config
        configMap:
          name: gitea-config
