config/gitea/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: env
  labels:
    name: gitea
spec:
  ports:
    - name: gitea
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    name: gitea
  type: NodePort
