config/gitea/manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: env
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    # certmanager.k8s.io/cluster-issuer: ClusterIssuer
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - gitea.rdp.dev
    secretName: ingress-certs
  rules:
  - host: gitea.rdp.dev
    http:
      paths:
      - backend:
          serviceName: gitea
          servicePort: 3000
      - backend:
          serviceName: gitea-ssh
          servicePort: 22
